--- a/app/src/main/res/drawable/bg_button_primary.xml
+++ b/app/src/main/res/drawable/bg_button_primary.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/accent_electric_blue" />
-    <corners android:radius="30dp" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#40FFFFFF">
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="0"
+                android:endColor="@color/accent_blue_deep"
+                android:startColor="@color/accent_electric_blue"
+                android:type="linear" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+</ripple>
