--- a/app/src/main/res/drawable/bg_card_rounded.xml
+++ b/app/src/main/res/drawable/bg_card_rounded.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#2C2C2E" />
-    <corners android:radius="16dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/surface_card" />
+    <corners android:radius="20dp" />
     <stroke
         android:width="1dp"
-        android:color="#3C3C3E" />
+        android:color="#0DFFFFFF" />
 </shape>
