--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MindControl" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.KeepMyPhoneOut" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/accent_electric_blue</item>
         <item name="colorPrimaryVariant">@color/bg_dark_start</item>
